Game of life updated

--- a/index.html
+++ b/index.html
@@ -1,25 +1,17 @@
-<!DOCTYPE html>
+<!Doctype <!DOCTYPE html>
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>Game of Life</title>
-    <link href="index.css" rel="stylesheet">
-
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="build/style.css">
 </head>
 
 <body>
-
-    <table id="grid-wrap">
-
-        <!-- Grid will be generated -->
-
-    </table>
+    <script src="build/bundle.js"></script>
+    <canvas id="myCanvas" width="400" height="400" style="border:1px solid #000000;"></canvas>
 </body>
-
-<script src="index.js"></script>
-<script>
-    game.init();
-</script>
 
 </html>
