Doc for the game

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
     <script src="build/bundle.js"></script>
     <canvas id="myCanvas" width="400" height="400" style="border:1px solid #000000;"></canvas>
+
+    <h1 style="margin-top: 40px">Game of life</h1>
+    <a href="https://en.wikipedia.org/wiki/Conway's_Game_of_Life">Please see this for more</a>
 </body>
 
 </html>
